# Shopee-AI-Engineer-Technical-Test

./: .gitignore  README.md  pyproject.toml
docs/: index.html
src/Q0 Ai Engineering Knowledge Test/: README.md  q1.md  q2.md  q3.md  q4.md  q5.md
src/Q1 CSV Parsing/: README.md  notebook.ipynb
src/Q2 Large CSV Parsing/: README.md  notebook_large.ipynb
src/Q3 Small Vs Large/: README.md
src/Q4 Vector DB/: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  utils.py  vector-search.sql  vector_search.sql
