[project]
name = "shopee-ai-engineer-technical-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask[complete]>=2025.7.0",
    "gdown>=5.2.0",
    "graphviz>=0.21",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
]
